--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<h3 id="title">开始游戏</h3>
+		<h3 id="title" style="color: red;">开始游戏</h3>
 		<canvas id="gameview" width="500" height="500"></canvas>
 
 		<script src="static/js/jquery-3.1.1.min.js" type="text/javascript" charset="utf-8"></script>
