--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 //				}
 //				
 //				$("#gameview").click(function(){
-//					snakegame.start();
+//					snakegame.paint();
 //				});
 				//直接进入游戏界面
 				bgImg.onload = function(){
