--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
 
 	<head>
+		
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 		<title>响应式贪吃蛇1701</title>
+		<style type="text/css">
+			*{
+				margin: 0;
+				padding: 0;
+			}
+		</style>
 	</head>
 
 	<body>
 		<canvas id="gameview" width="500" height="500"></canvas>
-
 		<script src="static/js/jquery-3.1.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="static/js/Snake.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
